--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,62 @@
 * {
-  margin: 1%;
-  padding: 0%;
+  margin: 0;
 }
 .App {
-  text-align: left;
+  display: flex;
+  justify-content: center;
+  align-items: top;
+  height: 100vh;
+  padding: 2vh;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f7f6f6;
+  color: rgb(79, 4, 4);
+  width: 90%;
+  gap: 2vh;
+  padding-left: 2vw;
+  padding-right: 2vw;
+}
+.main {
+  display: flex;
+  background-color: #f7f6f6;
+  width: 90%;
+  gap: 2vw;
+  padding-top: 2vw;
+  padding-bottom: 2vw;
+  padding-left: 2vw;
+  padding-right: 2vw;
+}
+.form {
+  background-color: #dddddd;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  width: 100%;
+  gap: 3vw;
+  padding: 1rem;
+  border-radius: 1.2%;
+}
+.page-contants {
+  background-color: #dddddd;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100%;
+  width: 100%;
+  gap: 3vw;
+  padding: 1rem;
+  border-radius: 1.2%;
 }
-
-.App-link {
-  color: #61dafb;
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin: 2rem auto;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+table th,
+table td {
+  border: 1px solid #630505;
+  padding: 1rem;
+  text-align: left;
 }
